--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,39 @@
 asgiref==3.4.1
+beautifulsoup4==4.9.3
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.3
+dialogflow==1.1.1
 dj-database-url==0.5.0
 Django==3.2.5
+google==3.0.0
+google-api-core==1.31.1
+google-auth==1.34.0
+google-cloud==0.34.0
+google-cloud-core==1.7.2
+google-cloud-dialogflow==2.7.1
+google-cloud-storage==1.41.1
+google-cloud-vision==2.4.2
+google-crc32c==1.1.2
+google-resumable-media==1.3.3
+googleapis-common-protos==1.53.0
+grpcio==1.39.0
 gunicorn==20.1.0
+idna==3.2
+packaging==21.0
+proto-plus==1.19.0
+protobuf==3.17.3
 psycopg2-binary==2.9.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyparsing==2.4.7
 pytz==2021.1
+requests==2.26.0
+rsa==4.7.2
+six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
+urllib3==1.26.6
 whitenoise==5.3.0
