--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ deepface==0.0.67
 dialogflow==1.1.1
 dj-database-url==0.5.0
 Django==3.2.5
+django-crontab==0.7.1
 filelock==3.0.12
 Flask==2.0.1
 flatbuffers==1.12
