--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ grpcio==1.34.1
 gunicorn==20.1.0
 h5py==3.1.0
 idna==3.2
+importlib==1.0.4
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Keras==2.4.3
@@ -78,6 +79,7 @@ termcolor==1.1.0
 tqdm==4.62.0
 typing-extensions==3.7.4.3
 urllib3==1.26.6
+waitress==2.0.0
 Werkzeug==2.0.1
 whitenoise==5.3.0
 wrapt==1.12.1
