--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ charset-normalizer==2.0.4
 clang==5.0
 click==8.0.1
 colorama==0.4.4
+cycler==0.10.0
 deepface==0.0.67
 dj-database-url==0.5.0
 Django==3.2.6
 django-crontab==0.7.1
+fer==21.0.3
 filelock==3.0.12
 Flask==2.0.1
 flatbuffers==1.12
@@ -27,18 +29,22 @@ google-crc32c==1.1.2
 google-pasta==0.2.0
 google-resumable-media==1.3.3
 googleapis-common-protos==1.53.0
-grpcio==1.39.0
+grpcio==1.34.1
 h5py==3.1.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
-keras==2.6.0
+Keras==2.4.3
+keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
+matplotlib==3.4.3
 mtcnn==0.1.1
 numpy==1.19.5
 oauthlib==3.1.1
+opencv-contrib-python==4.5.3.56
 opencv-python==4.5.3.56
 opt-einsum==3.3.0
 packaging==21.0
@@ -53,17 +59,19 @@ pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 retina-face==0.0.5
 rsa==4.7.2
+scipy==1.7.1
 six==1.15.0
 sqlparse==0.4.1
 tensorboard==2.6.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.6.0
-tensorflow-estimator==2.6.0
+tensorflow==2.5.1
+tensorflow-estimator==2.5.0
 termcolor==1.1.0
 tqdm==4.62.1
 typing-extensions==3.7.4.3
