--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ kiwisolver==1.3.1
 Markdown==3.3.4
 matplotlib==3.4.3
 mtcnn==0.1.1
-numpy==1.19.5
+numpy
 oauthlib==3.1.1
 opencv-contrib-python==4.5.3.56
 opencv-python==4.5.3.56
