--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ opencv-contrib-python==4.5.3.56
 opencv-python==4.5.3.56
 opt-einsum==3.3.0
 packaging==21.0
-pandas==1.3.2
+pandas
 Pillow==8.3.1
 proto-plus==1.19.0
 protobuf==3.17.3
