--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.4
-matplotlib==3.4.3
+matplotlib
 mtcnn==0.1.1
 numpy
 oauthlib==3.1.1
